# plc-minitor

./: README.md
codesys-runtime/: Dockerfile  Readme.md  entrypoint.sh
plc-monitor-v2/: .editorconfig  .env  .gitignore  CMakeLists.txt  Readme.md  docker-compose.yml
plc-monitor-v2/docker/: .dockerignore  Dockerfile.debug  Dockerfile.release
plc-monitor-v2/grafana/: grafana_dashboards.yml  grafana_datasources.yml  home.json
plc-monitor-v2/include/: DwdAdapter.h  PlcClient.hpp  PrometheusClient.hpp  RequestInterceptor.h  SimulationController.hpp  SimulationService.h  WindSpeedChangedCallback.hpp
plc-monitor-v2/include/plchandler/: CMItf.h  CMLockItf.h  CMUtilsHashItf.h  CMUtilsItf.h  CmpBinTagUtilItf.h  CmpBlkDrvItf.h  CmpChannelClientAppItf.h  CmpChannelClientItf.h  CmpChannelMgrItf.h  CmpCommunicationLibItf.h  CmpCryptMD5Itf.h  CmpCryptoItf.h  CmpCryptoProviderItf.h  CmpDeviceItf.h  CmpErrors.h  CmpEventCallbackItf.h  CmpEventMgrItf.h  CmpGwClientItf.h  CmpItf.h  CmpLogBackendItf.h  CmpLogItf.h  CmpMemPoolItf.h  CmpNameServiceClientItf.h  CmpPLCHandlerDep.h  CmpPLCHandlerItf.h  CmpRouterItf.h  CmpSIL2Itf.h  CmpSecureChannelItf.h  CmpSecurityManagerItf.h  CmpSessionInformationItf.h  CmpSettingsItf.h  CmpSrvItf.h  CmpStd.h  CmpTlsItf.h  CmpUserDBItf.h  CmpUserMgrItf.h  CmpX509CertItf.h  CmpXMLParserItf.h  HelperClasses.h  LogInfoIds.h  (+39 more)
plc-monitor-v2/include/swagger/: AppComponent.hpp  StatusDTO.hpp  WindSpeedDTO.h
plc-monitor-v2/prometheus/: prometheus.yml
plc-monitor-v2/resources/: application.cfg
plc-monitor-v2/src/: DwdAdapter.cpp  PlcClient.cpp  PrometheusClient.cpp  SimulationController.cpp  SimulationService.cpp  WindSpeedChangedCallback.cpp  dwd_adapter.py  main.cpp
plc-monitor-v2/static/: index.html
plc-monitor-v2/static/css/: main.css
plc-monitor-v2/static/js/: map.js
plc-monitor-v2/static/json/: dwd_stations.json
